# RustGram

./: .env  .env.example  Cargo.toml  Dockerfile  GEMINI.md  docker-compose.yml
scripts/: generate_key.rs
src/: config.rs  crypto.rs  error.rs  main.rs  models.rs  worker.rs
src/handlers/: admin.rs  health.rs  image.rs  job.rs  mod.rs  upload.rs  url_upload.rs
src/middleware/: rate_limit.rs
src/services/: telegram.rs
