[package]
name = "RustGram"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# Encoding
base64 = "0.22"
hex = "0.4"

# Image processing
image = "0.24"
mime = "0.3"
mime_guess = "2.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Config
dotenvy = "0.15"

# Async utilities
futures = "0.3"
bytes = "1.5"

# Additional dependencies for utilities
fastrand = "2.0"

[[bin]]
name = "telegram-image-host"
path = "src/main.rs"

[[bin]]
name = "generate_key"
path = "scripts/generate_key.rs"
